Adding more files

--- a/Blog.API/Blog.API.csproj
+++ b/Blog.API/Blog.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Blog.Infra\Blog.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
